crates/pyenum-derive/tests/ui/fail/lifetime_enum.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
pub enum Bad<'a> {
    Borrowed(&'a str),
}

fn main() {}
